# fistbump

./: README.md  githooks.toml  pyproject.toml  tasks.py
fistbump/: __main__.py  fistbump.py
